<resources>
    <string name="app_name">MoviesDB</string>
    <string name="search_movie">Search</string>
    <string name="enter_movie_name">Enter Movie Name</string>

    <string name="name_placeholder">No Label Value</string>
    <string name="empty_repo_list">No Data to display</string>

    <string name="categories">Categories</string>
    <string name="synopsis">Synopsis</string>
    <string name="score">Score</string>
    <string name="reviews">Reviews</string>
    <string name="popularity">Popularity</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="actors">Actors</string>
    <string name="movie_details">Movie Details</string>
    <string name="movies_list">List of Movies</string>
</resources>
